openshift/service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshift-python
spec:
  selector:
    app: openshift-python
    deploymentconfig: openshift-python
  ports:
  - name: flask
    protocol: TCP
    port: 5000
    targetPort: 5000
